--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,27 @@
-server.port=8088
+server.port=8080
 
-spring.jpa.database=mysql
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
+
+# Spring Batch
+spring.batch.jdbc.initialize-schema=always
+spring.batch.initializer.enabled=false
+spring.batch.job.enabled=false
 
 #Database Name List
 spring.database-names.list =student,college
 
 #student database credentials
-spring.datasource.student.url=jdbc:mysql://localhost:3307/student_database
-spring.datasource.student.username=root
-spring.datasource.student.password=root
-spring.datasource.student.driver=com.mysql.cj.jdbc.Driver
+spring.datasource.student.url=jdbc:postgresql://localhost:1234/student_database
+spring.datasource.student.username=postgres
+spring.datasource.student.password=postgres
+spring.datasource.student.driver=org.postgresql.Driver
 
 #college database credentials
-spring.datasource.college.url=jdbc:mysql://localhost:3307/college_database
-spring.datasource.college.username=root
-spring.datasource.college.password=root
-spring.datasource.college.driver=com.mysql.cj.jdbc.Driver
+spring.datasource.college.url=jdbc:h2:mem:testdb
+spring.datasource.college.username=sa
+spring.datasource.college.password=password
+spring.datasource.college.driver=org.h2.Driver
+spring.h2.console.enabled=true
