--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,27 +1,31 @@
 server.port=8080
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.generate-ddl=true
-spring.jpa.show-sql=true
+#student JPA Configs
+spring.jpa.student.ddl-auto=none
+spring.jpa.student.show-sql=true
+spring.jpa.student.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+#college JPA Configs
+spring.jpa.college.ddl-auto=create
+spring.jpa.college.show-sql=true
+spring.jpa.college.dialect=org.hibernate.dialect.H2Dialect
 
 # Spring Batch
 spring.batch.jdbc.initialize-schema=always
 spring.batch.initializer.enabled=false
 spring.batch.job.enabled=false
 
-#Database Name List
-spring.database-names.list =student,college
-
-#student database credentials
+#student database Configs
 spring.datasource.student.url=jdbc:postgresql://localhost:1234/student_database
 spring.datasource.student.username=postgres
 spring.datasource.student.password=postgres
 spring.datasource.student.driver=org.postgresql.Driver
 
-#college database credentials
+#college database Configs
 spring.datasource.college.url=jdbc:h2:mem:testdb
 spring.datasource.college.username=sa
 spring.datasource.college.password=password
 spring.datasource.college.driver=org.h2.Driver
 spring.h2.console.enabled=true
+spring.h2.console.settings.trace=false
+spring.h2.console.settings.web-allow-others=false
